--- a/static/css/style.css
+++ b/static/css/style.css
@@ -724,6 +724,14 @@ small {
   #intro.section .container *:not(span):not(.readme):not(.contactme) {
     padding: 0;
   }
+  .readme {
+    padding: 7px 16px;
+
+  }
+  .contactme {
+    padding: 7px 16px;
+
+  }
   .card .card-content .card-title {
     font-size: 20px;
     line-height: 24px;
