--- a/static/css/style.css
+++ b/static/css/style.css
@@ -736,13 +736,6 @@ small {
     font-size: 20px;
     line-height: 24px;
   }
-  #experience span.card-title {
-    text-align: center;
-    display: block;
-  }
-  #experience span.card-title a {
-    margin: 0;
-  }
   i.mdi-navigation-close.right {
     position: relative;
     bottom: 15px;
@@ -783,7 +776,20 @@ small {
 .card .logo-img {
   position: absolute;
   right: 62px;
-  top: 15px;
+  top: 5px;
+}
+
+.eccc-img {
+  position: absolute;
+  width: 25%;
+  height: auto;
+  transition: all 0.3s ease-in-out;
+}
+
+.card .eccc-img {
+  position: absolute;
+  right: 42px;
+  top: 25px;
 }
 
 .custom-col {
@@ -807,6 +813,27 @@ small {
 /* Default - no line break */
 .break-on-smaller {
   display: none;
+}
+
+.break-on-medium {
+  display: none;
+}
+
+#eccc-title {
+  margin-bottom: 45px;
+}
+
+@media (max-width: 1260px) {
+  .break-on-medium {
+      display: inline;
+  }
+  #eccc-title {
+    margin-bottom: 0;
+  }
+  .card .eccc-img {
+    width: 40%;
+    height: auto;
+  }
 }
 
 /* On small screens, show the <br> element */
@@ -840,7 +867,7 @@ small {
 @media screen and (max-width: 992px) {
   .card .logo-img {
     position: absolute; /* Change to absolute positioning */
-    top: 20px; /* Adjust the top position as needed */
+    top: 10px; /* Adjust the top position as needed */
     right: 45px; /* Adjust the right position as needed */
     width: 200px; /* Adjust the width as needed */
     height: auto; /* Maintain the aspect ratio */
@@ -850,7 +877,7 @@ small {
 @media screen and (max-width: 700px) {
   .card .logo-img {
     position: absolute; /* Change to absolute positioning */
-    top: 25px; /* Adjust the top position as needed */
+    top: 15px; /* Adjust the top position as needed */
     right: 45px; /* Adjust the right position as needed */
     width: 150px; /* Adjust the width as needed */
     height: auto; /* Maintain the aspect ratio */
@@ -866,14 +893,47 @@ small {
   }
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 756px) {
   .card .logo-img {
     position: relative; /* Change to absolute positioning */
     top:15px;
     left: 0px; /* Adjust the right position as needed */
-    width: 130px; /* Adjust the width as needed */
+    width: 180px; /* Adjust the width as needed */
     height: auto; /* Maintain the aspect ratio */
-    margin-bottom: -30px;
+    margin-bottom: -38px;
+  }
+}
+
+#eccc-link2 {
+  display: none;
+}
+
+@media screen and (max-width: 992px) {
+  .card .eccc-img {
+    width: 35%;
+    height: auto;
+  }
+}
+
+@media screen and (max-width: 756px) {
+  #eccc-link1 {
+    display: none;
+  }
+  #eccc-link2 {
+    display: block;
+  }
+  .card .eccc-img {
+    position: relative; /* Change to absolute positioning */
+    top:30px;
+    left: 0px; /* Adjust the right position as needed */
+    width: 80%;
+    height: auto;
+    margin-bottom: 38px;
+  }
+}
+@media screen and (max-width: 600px) {
+  .card .eccc-img {
+    width: 100%;
   }
 }
 
