Complete working 1st version

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -504,6 +504,14 @@ a.hoverline {
   -webkit-transition: 0.25s all;
 }
 
+p.hoverline {
+  border-bottom: 3px solid transparent !important;
+  padding: 3px 3px 0 3px;
+  transition: 0.25s all;
+  -moz-transition: 0.25s all;
+  -webkit-transition: 0.25s all;
+}
+
 a.hoversize {
   padding: 3px 3px 0 3px;
   transition: 0.25s all;
@@ -516,7 +524,6 @@ a.hoversize {
   margin-top: 5px;
 }
 
-
 /* main a.hoverline */
 
 /* a.hoverline:hover {
@@ -526,6 +533,16 @@ a.hoversize {
 a.hoverline:hover {
   font-size: 103%;
   border-bottom: 3px solid #004d40 !important;
+}
+
+p.hoverline:hover {
+  font-size: 103%;
+  border-bottom: 3px solid #004d40 !important;
+  cursor: pointer
+}
+
+p.hoverpointer:hover {
+  cursor: pointer;
 }
 
 a.hoversize:hover {
@@ -576,7 +593,7 @@ a.hoversize:hover {
 }
 
 .card.medium .card-image {
-  height: 240px;
+  height: 200px;
 }
 
 .card-action a.btn-floating {
@@ -754,10 +771,7 @@ small {
     font-size: 20px;
     line-height: 24px;
   }
-  i.mdi-navigation-close.right {
-    position: relative;
-    bottom: 15px;
-  }
+  
   #contact a:not(.btn-floating) {
     text-align: center;
     display: block;
@@ -902,6 +916,54 @@ small {
   }
 }
 
+/* .card.medium .card-content {
+  height: fit-content;
+} */
+
+.card.medium span.proj {
+  margin-top:20px;
+}
+
+@media screen and (max-width: 1100px) {
+  .card.medium span.proj {
+    margin-top:10px;
+  }
+}
+
+#projects .card.medium {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.card.medium .card-reveal ul li {
+  font-size: 80%;
+}
+
+#projects .card-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  flex-grow: 1;
+}
+
+#projects .card-content p {
+  margin-top: auto; /* Push the paragraph to the bottom */
+  margin-bottom: 0; /* Ensure there's no extra space below the paragraph */
+}
+
+@media screen and (max-width: 992px) {
+  .card.medium span.proj {
+    margin-top:0px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .card.medium span.proj {
+    margin-top:35px;
+  }
+}
+
 @media screen and (max-width: 600px) {
   .card .logo-img {
     position: absolute; /* Change to absolute positioning */
@@ -935,7 +997,7 @@ small {
     width: 100%;
     height: 2px; /* Adjust the height of the border as needed */
     background-color: #000000; /* Adjust the color of the border as needed */
-    opacity: 20%;
+    opacity: 10%;
   }
   
   
@@ -994,37 +1056,12 @@ small {
 }
 
 
-/* @media screen and (max-width: 1200px) {
-  .logo-img {
-    right: 132px;
-    width: 220px;
-  }
+.sticky-header {
+  position: sticky;
+  top: -20px;
+  margin-top: -20px;
+  background-color: white;
+  z-index: 10;
+  padding: 15px;
+  border-bottom: 1px solid #ccc;
 }
-
-@media screen and (max-width: 992px) {
-  .logo-img {
-    right: 92px;
-    width: 200px;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .logo-img {
-    right: 72px;
-    width: 175px;
-  }
-}
-
-@media screen and (max-width: 600px) {
-  .logo-img {
-    right: 10px;
-    width: 140px;
-  }
-} */
-
-/* @media screen and (max-width: 480px) {
-  .logo-img {
-    right: 10px;
-    width: 110px;
-  }
-} */
