Added icon to projects to show that they are clickable

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -734,7 +734,7 @@ small {
     display: block;
     position: fixed;
     top: 0;
-    z-index: 2;
+    z-index: 5;
   }
   .name-title {
     display: block;
@@ -1085,4 +1085,56 @@ small {
   z-index: 10;
   padding: 15px;
   border-bottom: 1px solid #ccc;
+}
+
+#projects .card {
+  position: relative;
+}
+
+#projects .icon-container {
+  position: absolute;
+  top: 10px; /* Adjust as needed */
+  right: 10px; /* Adjust as needed */
+  z-index: 2; /* Ensure it is on top of other elements */
+}
+
+#projects .mdi-button-pointer {
+  font-size: 45px; /* Adjust as needed */
+  color: rgb(0, 0, 0); /* Adjust as needed */
+}
+
+@media (max-width: 992px) {
+  #projects .mdi-button-pointer {
+    font-size: 40px; /* Adjust as needed */
+  }
+}
+
+.mdi-navigation-close.disabled-close {
+  opacity: 30%;
+}
+
+#projects .card-reveal .card-title:hover {
+  cursor: default;
+}
+
+.mdi-navigation-close:hover {
+  cursor: pointer;
+}
+
+.disabled-close:hover {
+  cursor: not-allowed;
+}
+
+.mdi-button-pointer {
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  --svg: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='%23000' d='M20 20.5c0 .8-.7 1.5-1.5 1.5H13c-.4 0-.7-.1-1-.4l-4-4.2l.7-.8c.2-.2.5-.3.8-.3h.2L12 18V9c0-.6.4-1 1-1s1 .4 1 1v4.5l1.2.1l3.9 2.2c.5.2.9.8.9 1.3zM20 2H4c-1.1 0-2 .9-2 2v8c0 1.1.9 2 2 2h4v-2H4V4h16v8h-2v2h2c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2'/%3E%3C/svg%3E");
+  background-color: currentColor;
+  -webkit-mask-image: var(--svg);
+  mask-image: var(--svg);
+  -webkit-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+  -webkit-mask-size: 100% 100%;
+  mask-size: 100% 100%;
 }
