--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1144,6 +1144,12 @@ small {
   margin-top: 20px; /* Adjust as needed for spacing */
 }
 
+@media (max-width: 992px) {
+  .back-to-top-container {
+    margin-top: 60px; /* Adjust as needed for spacing */
+  }
+}
+
 .back-to-top {
   text-decoration: none;
   color: #000; /* Adjust as needed */
