--- a/static/css/style.css
+++ b/static/css/style.css
@@ -532,7 +532,7 @@ a.hoversize {
 }
 
 #skills .row .col {
-  margin-bottom: 20px;
+  margin-bottom: 30px;
   margin-top: 5px;
 }
 
@@ -649,7 +649,7 @@ a.hoversize:hover {
   top: 2px;
 }
 
-small {
+small:not(.show) {
   display: none;
 }
 
@@ -1192,4 +1192,26 @@ small {
 .back-to-top {
   text-decoration: none;
   color: #000; /* Adjust as needed */
+}
+
+#skills .flex-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: left;
+}
+
+#skills .flex-container .col {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+#skills .flex-container img {
+  margin-bottom: 5px;
+}
+
+.italics {
+  font-style: italic;
 }
