--- a/static/css/style.css
+++ b/static/css/style.css
@@ -678,7 +678,7 @@ small:not(.show) {
 }
 
 .blue {
-  background-color: #2a515a !important;
+  background-color: #2a515a67 !important;
 }
 
 .rounded {
